--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
-  width: 98.5vw;
-  margin-left: 9px;
+  width: 100vw;
+  /* margin-left: 9px; */
   /* margin-right: 10px; */
   position: relative;
 
