--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -53,7 +53,9 @@
     border-radius: 4px;
     cursor: pointer;
     text-align: center;
-    margin-left: 50px;
+    margin-left: 38px;
+    width: 110px;
+    height: 40px;
 }
 
 .login-button:hover {
